--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Kovalik_homework2</string>
-    <string name="cellName">Data</string>
+    <string name="cellName">Add App</string>
     <string name="settingsName">Settings</string>
     <string name="appButton">APP</string>
     <string name="title_activity_new_app">NewAppActivity</string>
