--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="settingsName">Settings</string>
     <string name="appButton">APP</string>
     <string name="title_activity_new_app">NewAppActivity</string>
+    <string name="del_text">Delete</string>
     <integer name="gridColumnCount">3</integer>
     <integer name="gridRowCount">4</integer>
 </resources>
